# SecUSB

./: .gitmodules  CMakeLists.txt  README.md  test.py
src/: CMakeLists.txt  main.cpp  tusb_config.h
